[package]
name = "tarpc_ws_transport"
version = "0.1.0"
license = "MIT"
edition = "2021"
description = "A WebSocket-based bincode transport for tarpc services"
repository = "https://github.com/BlockListed/tarpc_ws_transport"
keywords = ["network", "rpc", "websocket", "bincode", "tarpc"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
axum = { version = "0.7.5", default-features = false, features = ["ws"] }
bincode = "1.3.3"
futures-util = "0.3.30"
pin-project-lite = "0.2.13"
serde = "1.0.197"
tarpc = { version = "0.34.0", features = ["tokio1", "serde1"] }
tokio = "1.36.0"
tokio-tungstenite = "0.21.0"
